--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "dev": "remix dev"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-document-nodes": "^2.2.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
     "@remix-run/node": "^1.3.4",
     "@remix-run/react": "^1.3.4",
     "@remix-run/vercel": "^1.3.4",
     "@vercel/node": "^1.14.0",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
