--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "supertokens-node": "^9.1.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.4",
